Prep for 2.0.0 release (#85)
* fix: APPS-285 close client connections when evicted from cache (#76)

* APPS-315 APPS-63 APPS-288 Operations V2 (#80)

* build: Upgrade to jdk 17.

* feat!: Document RestClientOperation with swagger
RestClientOperation are now called Operations and are fully documented in the swagger documentation. The old /operate and /execute  API is still supported with the `/v1` prefix.  The new API is available with the `/v2` prefix. HLL and Bit Operations are now documented.

* docs: Update openapi.json with new operation, query, ctx, and batch models

* chore: Update copyright

*  Bump springdoc-openapi-ui from 0.6.11 to 1.6.12 (#83)

* Use eclipse-temurin images in Dockerfile (#70)

* Bump spring-retry from 1.3.1 to 1.3.4 (#81)

Bumps [spring-retry](https://github.com/spring-projects/spring-retry) from 1.3.1 to 1.3.4.
- [Release notes](https://github.com/spring-projects/spring-retry/releases)
- [Commits](https://github.com/spring-projects/spring-retry/commits/v1.3.4)

---
updated-dependencies:
- dependency-name: org.springframework.retry:spring-retry
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Bump jackson-dataformat-msgpack from 0.9.0 to 0.9.3 (#82)

Bumps [jackson-dataformat-msgpack](https://github.com/msgpack/msgpack-java) from 0.9.0 to 0.9.3.
- [Release notes](https://github.com/msgpack/msgpack-java/releases)
- [Changelog](https://github.com/msgpack/msgpack-java/blob/develop/RELEASE_NOTES.md)
- [Commits](https://github.com/msgpack/msgpack-java/compare/v0.9.0...v0.9.3)

---
updated-dependencies:
- dependency-name: org.msgpack:jackson-dataformat-msgpack
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot